# lemur-tpu-training

./: pyproject.toml
launcher/: launcher_cpu_1024.sh  launcher_cpu_1024_resume.sh  launcher_cpu_256_resume.sh  launcher_cpu_512.sh  launcher_cpu_512_resume.sh  train_sf_1024.sh  train_sf_1024_resume.sh  train_sf_256_70b_resume.sh  train_sf_512.sh  train_sf_512_70b.sh  train_sf_512_70b_resume.sh  train_sf_512_70b_resumefrom1024.sh
scripts/: tpu_vm_setup_sf_0818.sh
tests/: test_dataset.py  test_tokenizer.py
xtpu/: checkpoint.py  data.py  jax_utils.py  model.py  optimizers.py  serve.py  serving.py  train.py
